# agentic_council

./: .gitignore  INSTALL.md  README.md  index.html  install-windows.ps1  install.bat  install.sh  package-lock.json  package.json  plan.md  run.bat  tsconfig.app.json  vite.config.ts
.github/workflows/: ci.yml
src/: App.tsx  styles.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: catalog.rs  checkpoint.rs  commands.rs  engine.rs  ingestion.rs  lib.rs  main.rs  models.rs  providers.rs  report.rs  security.rs  state.rs
src/components/: AspectGate.tsx  ClarificationPanel.tsx  InfoTip.tsx  MarkdownContent.test.tsx  MarkdownContent.tsx  Modal.tsx  NoticeToast.tsx  Roundtable.tsx  SessionSetup.tsx  SettingsPanel.tsx  TelemetryPanel.tsx
src/lib/: agentPresentation.test.ts  agentPresentation.ts  backend.ts  demoBackend.test.ts  demoBackend.ts  exportFilename.test.ts  exportFilename.ts  providerPresentation.test.ts  providerPresentation.ts
src/store/: councilStore.ts
