[package]
name = "agentic-council"
version = "0.1.0"
description = "A private, local-first multi-agent brainstorming roundtable"
authors = ["Agentic Council contributors"]
edition = "2024"
rust-version = "1.92"

[lib]
name = "agentic_council_lib"
# This project ships desktop targets only. `staticlib` and `cdylib` are needed
# by Tauri's iOS/Android targets, but building them on desktop creates very
# large duplicate archives (several GB on Windows) that the desktop binary
# never uses.
crate-type = ["rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
atomicwrites = "0.4"
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
csv = "1.3"
futures-util = "0.3"
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "webp"] }
keyring = "4.1"
parking_lot = "0.12"
pdf-extract = "0.12"
quick-xml = "0.40"
rand = "0.9"
regex = "1.11"
reqwest = { version = "0.13", default-features = false, features = ["json", "stream", "rustls-no-provider"] }
rustls = { version = "0.23", default-features = false, features = ["ring", "std", "tls12"] }
secrecy = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
sha2 = "0.10"
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
thiserror = "2.0"
tokio = { version = "1.46", features = ["fs", "macros", "rt-multi-thread", "sync", "time"] }
tokio-util = "0.7"
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["fmt"] }
typst = "0.15"
typst-as-lib = { version = "0.16", features = ["typst-kit-fonts", "typst-kit-embed-fonts"] }
typst-pdf = "0.15"
url = "2.5"
uuid = { version = "1.17", features = ["serde", "v4"] }
zip = { version = "4.3", default-features = false, features = ["deflate"] }
zeroize = "1.8"

[dev-dependencies]
wiremock = "0.6"

[profile.dev]
# A source launch is primarily an end-user convenience. Incremental Rust
# generations are useful while actively editing code, but this crate's
# generations are hundreds of MB each and can accumulate in synced folders.
incremental = false

[profile.test]
incremental = false

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
panic = "abort"
strip = true
